syntax = "proto3";

//здесь сообщаем серверу о создании новой комнаты, сервер должен добавить созданный сервер в список всех серверов
service ServersListMaker {
  rpc AddServerToList (Server) returns (IsSuccecfull) {};
}

// The request message.
message Server {
  string ip = 1;
  string port = 2;
  string name = 3;
//  string password = 4;
}

// The response message.
message IsSuccecfull {
  string isSuccec = 1;
}
